# agents

./: .gitignore  .wpx-base-sha  CLAUDE.md  CONTRIBUTING.md  README.md  package-lock.json  package.json
plugins/sulis-execution/sdk/mcp-server/: pyproject.toml
plugins/sulis-execution/sdk/mcp-server/sulis_execution_mcp/: __init__.py  __main__.py  server.py
plugins/sulis-execution/sdk/mcp-server/tests/: test_server.py
plugins/sulis-execution/sdk/python/: pyproject.toml
plugins/sulis-execution/sdk/python/sulis_execution/: __init__.py  _client.py  _helpers.py  errors.py  transport.py  types.py
plugins/sulis-execution/sdk/python/tests/: conftest.py  test_pilot.py  test_resources_smoke.py
plugins/sulis/scripts/: README.md  _acceptance_gate.py  _actor_emission.py  _anonymiser.py  _assert_bdr_adr.py  _assert_c4_levels.py  _assert_doc_sections.py  _assert_flow_scenario_map.py  _assert_interface_contract.py  _assert_measurable_nfr.py  _assert_no_depth_doc_gate.py  _assert_same_section_set.py  _assert_section_na.py  _assert_stride.py  _assert_walk_subset_of_contract.py  _assert_walk_table.py  _brain_capture.py  _brain_emit_helper.py  _brain_labels.py  _brain_location.py  _brain_query.py  _brand_from_design.py  _change_context.py  _change_emission.py  _change_lifecycle.py  _change_service.py  _change_session.py  _change_state.py  _changeset.py  _collision_schedule.py  _component_emission.py  _credential_emission.py  _decision_emission.py  _deployment_emission.py  _design_emission.py  _doc_section_parse.py  _drive_decisions.py  _drive_journey_walk.py  _drive_scenario.py  _drive_specify.py  (+148 more)
plugins/sulis/scripts/_canonical_drift/: __init__.py  matcher.py  parser.py  reader.py  report.py
plugins/sulis/scripts/_discovery/: __init__.py  inferrer.py  inspector.py  minter.py  slug.py  tenant.py  verifier.py
plugins/sulis/scripts/_discovery/_prompts/: infer.txt
plugins/sulis/scripts/_safe_fetch/: __init__.py  extraction.py  fetcher.py  framing.py  ports.py  proxy.py  tool.py
plugins/sulis/scripts/_session_manager/: DAEMON_CONTRACT.md  __init__.py  adapter.py  binding.py  chat_scope_store.py  classifier.py  context_payload.py  daemon_client.py  durable_sink.py  event_log.py  events.py  guards.py  lifecycle.py  maintenance.py  manager.py  recovery.py  resume_readers.py  scrollback.py  session.py  socket_server.py  spawn_env.py  state.py  thread_contract.py  thread_store_local.py  viewer.py
plugins/sulis/scripts/_session_manager/adapters/: __init__.py  _pre_prompt.py  agy_pty.py  claude.py  claude_pty.py
plugins/sulis/scripts/_session_manager/tests/: conftest.py  test_chat_scope_store.py  test_provider_on_open.py
plugins/sulis/scripts/hooks/: prepare-commit-msg
plugins/sulis/scripts/tests/: DOGFOOD_ACCEPTANCE.md  README.md  _no_egress_shim.py  bootstrap_from_zero.sh  conftest.py  run.sh  test_drive_specify.py
plugins/sulis/scripts/tests/chaos/: test_missing_pin_falls_through.sh  test_race_window.sh
plugins/sulis/scripts/tests/characterisation/: test_living_entity_emit_baseline.py  test_minter_reconcile_baseline.py
plugins/sulis/scripts/tests/fixtures/: WP-001-template.md
plugins/sulis/scripts/tests/integration/: conftest.py  test_agy_binary_introspection.py  test_bootstrap_graceful_degradation.sh  test_brain_query_cli_modes.py  test_browser_driver_real.py  test_capture_e2e.py  test_cold_memory_live_resume.py  test_daemon_pidfile.py  test_daemon_singleton.py  test_daemon_wedge_self_heal.py  test_discover_cancellation_idempotent.py  test_discover_consumer_repo_regression.py  test_discover_e2e.py  test_drift_message_uses_shared_gh_stub.sh  test_durable_append_sink.py  test_emit_lifecyclerun_lockstep.py  test_ensure_daemon.py  test_file_tools_scenarios.py  test_interaction_gate_clinics_spike.py  test_live_resume_injection.py  test_loop_guard_survives_indirection.sh  test_migrate_marketplace_store.py  test_provider_independent_resume.py  test_safe_fetch_scenarios.py  test_scenarios_from_graph.py  test_session_cli_smoke.py  test_session_durable_sink_wiring.py  test_session_eviction.py  test_session_guards.py  test_session_manager_contract.py  test_session_manager_host.py  test_session_manager_recovery_e2e.py  test_session_restart_resume.py  test_session_viewer.py  test_socket_server.py  test_substrate_bundle_e2e.py  test_sulis_change_lifecycle.py  test_sulis_change_ship_worktree.py  test_sulis_issues.py  test_sulis_lessons.py  (+15 more)
plugins/sulis/scripts/tests/lib/: abm_canonical.sh  fake_claude_child.py  session_child_adapters.py  terminal_byte_fixtures.py
plugins/sulis/scripts/tests/manual/: session_driver_observed.md  smoke_sulis_change_id_resolves.md  smoke_sulis_change_id_stale.md  smoke_sulis_change_id_unset.md  smoke_sulis_change_start_spawn.md  smoke_terminal_launcher.md
plugins/sulis/scripts/tests/methodology/: test_backlog_skill_shape.py  test_bdr_distinct_from_adr.py  test_capture_skill_shape.py  test_live_release_on_merge_is_trunk.sh  test_opportunity_analyst_agent_shape.py  test_release_on_merge_yaml_unchanged_behaviour.sh
plugins/sulis/scripts/tests/unit/: _change_identity_strategies.py  _recovery_contract_fixtures.py  _route_fixtures.py  test_abm_shell_suite.py  test_acceptance_e2e.py  test_acceptance_gate.py  test_actor_emission.py  test_agents_dir_has_no_stray_reports.py  test_agy_provider_registration.py  test_agy_pty_adapter.py  test_anonymiser.py  test_anonymiser_characterisation.py  test_assert_walk_subset_of_contract.py  test_assisted_grammar_conformance.py  test_back_merge_step.py  test_bootstrap_backing_chain.py  test_brain_capture.py  test_brain_emit_helper.py  test_brain_emit_helper_step_resolution.py  test_brain_location.py  test_brain_query.py  test_brain_query_as_of.py  test_brain_query_views.py  test_branch_ci_has_drift_check.py  test_branch_ci_has_routing_gate.py  test_brand_from_design.py  test_browser_install_toolchain.py  test_canonical_strings_parity.sh  test_carry_context.py  test_central_tenant_home.py  test_change_context.py  test_change_emission.py  test_change_identity_properties.py  test_change_identity_resolution.py  (+295 more)
(+3912 files in other folders)
