[project]
# Internal-only project: not published, not distributable. This file exists so
# `uv` can manage the marketplace's test + Brain↔OS runtime dependencies from
# a single source of truth (PEP 621). Every CI workflow installs the same set;
# every local dev runs the same set.
#
# Replaces the prior pattern of `pip install pytest ...` inline in workflow
# files, which silently degraded into the "missed dep in CI" failure class
# twice (CH-01KSWB jsonschema, CH-01KSWM pyyaml — captured as #112).
name = "sulis-marketplace-scripts"
version = "0.0.0"
description = "Marketplace scripts + test deps for the Brain↔OS substrate layer (internal)."
requires-python = ">=3.11"

# Runtime dependencies — what `_entity_adapter_local.py`,
# `_servicespec_validator.py`, and friends import at runtime.
#
# The wpx-* CLI tooling itself remains stdlib-only per the plugin contract;
# these deps are scoped to the Brain↔OS seam (entity persistence +
# ServiceSpec compliance) introduced in CH-01KSWB / CH-01KSWM. New runtime
# deps go here, declared ONCE — both CI workflows then install them via
# `uv sync --frozen`, so there is no longer a "sweep every workflow"
# discipline to forget.
dependencies = [
    "jsonschema>=4.20",
    "pyyaml>=6.0",
    # detect-secrets (Yelp) — the established secret detector adopted as the
    # PRIMARY detector for the L1 OUTBOUND-SCRUB policy (WP-006 / ADR-006).
    # Imported by `_secret_patterns.find_secrets`, which the L1 proxy calls.
    # The in-house catalogue stays as the supplementary layer (private-IP +
    # env-assignment + slack/jwt/long-token); the anonymiser is catalogue-only.
    "detect-secrets>=1.5",
    "trafilatura>=2.1.0",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.60.0",
]


[dependency-groups]
# Dev-only — test runner + property-based testing engine. Separated from
# runtime so a future packaged distribution (if we ever ship the scripts as a
# Python package) doesn't carry these as runtime requirements. `hypothesis`
# powers the change-identity property layer (WP-006..008); the runtime CLI
# scripts stay stdlib-only — hypothesis is imported ONLY from test modules.
dev = [
    "pytest>=7.4",
    "hypothesis>=6.100",
]


[tool.uv]
# Not a distributable package — we never `uv build` this. UV's `package =
# false` mode means it manages the venv + lockfile without ever trying to
# build a wheel.
package = false


[tool.pytest.ini_options]
# Custom markers used by the discover-project E2E suite (WP-010).
# Registering them here suppresses pytest's PytestUnknownMarkWarning
# and gives CI a stable selector when it wants to skip dogfood runs
# (e.g., in offline environments without an LLM key):
#     pytest -m "not dogfood"
markers = [
    "dogfood: end-to-end test that exercises the discover-project skill against the marketplace's own repo (the n=2 acceptance per ADR-001). May be skipped in offline CI via `-m 'not dogfood'`.",
    "contract_suite: the SESSION_MANAGER_CONTRACT §2.10 conformance stubs (WP-008). The shared fixture set Phase-2's cockpit socket-client `runSessionBridgeContract` points at (§2.8.3); selectable as one suite via `-m contract_suite`.",
    "live_network: L1 safe-fetch leg that hits the real network (SC-L1.1 deferred need `safe-fetch-live-url`). Opt-in only — skipped in CI via the default `-m 'not live_network'` selection; run locally with `-m live_network`.",
]
