[build-system]
requires = ["setuptools >= 64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sulis-execution-mcp"
version = "0.2.4"
description = "MCP server for the sulis-execution plugin's CLI tools (wpx-pipeline, wpx-train, sulis-change, etc.)"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Iain Niven-Bowling" },
]
requires-python = ">=3.10"
dependencies = [
    "sulis-execution >= 0.2.4",
    "mcp >= 1.0.0",
    "pyyaml >= 6.0",
]
keywords = [
    "sulis-ai",
    "mcp",
    "model-context-protocol",
    "wpx",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
sulis-execution-mcp = "sulis_execution_mcp.server:main"

[project.urls]
Repository = "https://github.com/sulis-ai/agents"

[project.optional-dependencies]
test = [
    "pytest >= 8.0",
    "pytest-asyncio >= 0.23",
]

[tool.setuptools.packages.find]
include = ["sulis_execution_mcp*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
