[build-system]
requires = ["setuptools >= 64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sulis-execution"
version = "0.2.2"
description = "Typed Python SDK for the sulis-execution plugin's CLI tools (wpx-pipeline, wpx-train, sulis-change, etc.)"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Iain Niven-Bowling" },
]
requires-python = ">=3.10"
dependencies = [
    "pydantic >= 2.0",
    "typing-extensions >= 4.5",
]
keywords = [
    "sulis-ai",
    "sulis-execution",
    "wpx",
    "sdk",
    "agent-consumable",
    "executor",
    "work-package",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/sulis-ai/agents"
Documentation = "https://github.com/sulis-ai/agents/tree/main/plugins/sulis-execution/sdk"

[project.optional-dependencies]
test = [
    "pytest >= 8.0",
    "pytest-asyncio >= 0.23",
]

[tool.setuptools.packages.find]
include = ["sulis_execution*"]

[tool.setuptools.package-data]
"sulis_execution" = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
